@@ -1,12 +1,17 @@
-# @configure_input@ 
+# @configure_input@
 #
-namespace eval ::tkpath { 
-    proc load_package {dir} { 
-	load [file join $dir libtkpath@PACKAGE_VERSION@[info sharedlibext]] 
-	source $dir/tkpath.tcl 
-    };# load_package 
+namespace eval ::tkpath {
+    proc load_package {dir} {
+	load [file join $dir @PKG_LIB_FILE@]
+	# Allow optional redirect of library components.
+	# Only necessary for testing, but could be used elsewhere.
+	if {[info exists ::env(TKPATH_LIBRARY)]} {
+	    set dir $::env(TKPATH_LIBRARY)
+	}
+	source $dir/tkpath.tcl
+    };# load_package
 }
 
-package ifneeded tkpath @PACKAGE_VERSION@ [list ::tkpath::load_package $dir] 
+package ifneeded tkpath @PACKAGE_VERSION@ [list ::tkpath::load_package $dir]
 
-#*EOF* 
+#*EOF*
