@@ -1,4 +1,5 @@
 2009-03-31  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* pkgIndex.tcl.in: use a more flexible pkgIndex.tcl.in starter
 	* tkPathStyle.c (Tk_PathDashOptionSetProc): initialize newPtr
 
